<?xml version="1.0"?>
<package format="2">
  <name>echo_q_control</name>
  <version>0.0.1</version>
  <description>Control package for ECHO-Q Quadruped</description>
  <maintainer email="shreyas@example.com">Shreyas S Rai</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>numpy</exec_depend>
</package>
