<?xml version="1.0"?>
<package format="2">
  <name>echo_q_input_interfacing</name>
  <version>0.0.1</version>
  <description>Input handling for ECHO-Q (PS4/Keyboard)</description>
  <maintainer email="shreyas@example.com">Shreyas S Rai</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
